--- a/Libro.tex
+++ b/Libro.tex
@@ -1374,6 +1374,8 @@ l'aver scelto consapevolmente di indirizzare la nostra attenzione e i nostri giu
 risoluzione di un problema. Giudicare i nostri pensieri può diventare disfunzionale come abbiamo visto, per la natura stessa del
 cervello. Mentre giudicare le nostre azioni invece è molto proficuo. Noi non siamo i nostri pensieri ma anche e significativamente con le nostre azioni. Aristotele diceva che siamo quello che facciamo ripetutamente, non ciò che diciamo di essere. Anche qua però, anche se ci accorgiamo di non aver agito come avremmo voluto, non dobbiamo metterci in croce, perché altrimenti le probabilità che commetteremo nuovamente quell'errore aumenteranno. 
 
+Allo stesso modo non lo faremo con gli altri. Possiamo additare un pedofilo, un assassino come un mostro e poi scoprire che per anni, nell'innocenza di bambino che è stato, senza colpe, ha subito le peggiori violenze. Comprendere queste origini non attenua la gravità delle loro azioni, ma ci invita a riflettere sulla complessità del comportamento umano. Nei giusti contesti anche noi potremmo diventare dei mostri.
+
 Ma quindi chi siamo? Il nostro corpo è un accumulo di cibo, può essere tuo ma non può essere te. I tuoi pensieri sono un
 accumulo di cose che hai visto, cose che ti hanno detto, ragionamenti, quindi possono essere tuoi ma non possono essere
 te. Alcuni filosofi hanno detto che noi siamo le nostre azioni, Quindi chi siamo\endnote{“Conosci te stesso” può
@@ -2219,6 +2221,79 @@ A volte ricerchiamo così ossessivamente il benessere da viverlo con ansia.
 
 "Nella nostra cultura esiste uno stigma sulla tristezza." - Eric Wilson
 
+Etichettarci rigidamente può portare a comportamenti automatici o esagerati. Meglio riconoscere le nostre tendenze senza trasformarle in identità fisse.
+Se ci definiamo romantici potremmo diventare gelosi, attaccarci morbosamente, e recitare quella parte, a san Valentino fare certe cose, in queste circostanze bisogna reagire così, altrimenti non è vero amore. Se ci definiamo buoni e dovessimo sbagliare, come capita a tutti e, qualcuno dovesse farcelo nuotare, probabilmente andremo sulla difensiva e negheremo, andando su tutte le furie. 
+Inoltre come facciamo a definirci buoni? Come stabiliamo la linea della bontà se non in relazione agli altri? Quando ci definiamo buoni, talvolta, abbiamo stabilito che gli altri lo sono meno di noi o, noi più di loro. Ritroviamo lo stesso funzionamento per altro: la realizzazione, il successo o anche un tatuaggio. Un tatuaggio è solo un tatuaggio ma se lo riempiamo di significati, per qualcuno sarà sacralizzato e indiscutibile. Non c'è nulla di problematico nei tatuaggi, macchine, gioielli e per noi possono avere un significato, ma vanno comunque visti per ciò che sono, evitando di diventare dogmatici o troppo romantici e poetici per non avere reazioni troppo esagerate.
+Perché viene visto come più nobile il volontariato rispetto ad avere una bella auto per essere felici? Uno magari si annoia ad aiutare gli altri mentre gli piacciono le auto, perché dovrebbe esserci qualcosa di moralmente migliore? Infatti non c'è.
+Un oggetto però ha lo svantaggio che difficilmente riuscirà a rinnovare il suo interesse, è statico, lo compri, sei contento, poi pian piano ti ci abitui. Le attività invece, come una passione, un hobby, una relazione, possono continuamente rinnovarsi. Lo sport può essere l'esempio più chiaro dove si hanno obiettivi, nuove sfide, desideri di migliorare, evolvere ecc... Non c'è nulla di male, anche negli oggetti prettamente estetici, ma consapevoli di questo loro limite, potremmo valutare meglio se questo è un investimento che davvero vogliamo fare. Così se il fine è lo stare bene, è preferibile investire il proprio tempo e il proprio denaro in attività piuttosto che oggetti.
+
+Quando giudichiamo qualcosa lo definiamo. La parola definire deriva dal latino e significa limitare, stabilire dei
+confini. Quando noi definiamo qualcosa o qualcuno stiamo stabilendo delle regole sui suoi confini, stiamo limitando ciò
+che è o può essere. In altre parole, stiamo confinando qualcuno o qualcosa in una definizione molto stretta che può diventare una 
+trappola sia per noi che per l'altro, svilendo e appiattendo il lavoro di crescita personale che questo individuo può aver fatto.
+Può avvenire in maniera più esplicita con il razzismo o in modo più velato con il segno zodiacale.
+
+Quando definiamo una persona, in qualche modo, dentro di noi, ci siamo messi dalla parte del giudice, ed emesso
+una sentenza, una condannata e, a volte, delle conseguenze. 
+A volte siamo molto bravi a creare delle trappole da cui gli altri o noi stessi fatichiamo ad uscire.
+Ad esempio, se accuso qualcuno di narcisismo, la persona, nel tentativo di giustificarsi, potrebbe focalizzarsi su se stessa, alimentando involontariamente l'accusa. O ancora, se dico che sei permaloso con insistenza, una reazione di rabbia potrebbe essere interpretata come una conferma dell'accusa, creando una situazione difficile per l'accusato.
+Noi siamo quello che siamo,
+indipendentemente dai giudizi, ma definendoci faremo più fatica ad esserlo.
+
+
+
+
+
+
+
+
+
+
+
+Quando parlo di accettazione parlo dei pensieri, degli stati d'animo, di se stessi, non delle
+proprie azioni o comportamenti. La consapevolezza e l'accettazione non vanno confuse con la
+rassegnazione. Accorgersi di essere solitari non serve a rinchiudersi in casa, anzi, sapendo quanto faccia bene stare
+con gli altri, cerchiamo di tendere un pochino di più alla socialità. Se ci accorgiamo che non riusciamo a stare da
+soli, proviamo ogni tanto a stare con noi stessi, sapendo quanto anche questo sia importante. Se siamo troppo irascibili cerchiamo di mantenere la calma o se, viceversa gli altri di solito ci prevaricano, proviamo a imporci, stando attendi a non iper-compensare, ovvero, diventare una persona che inizia a litigare per ogni cosa. Quindi rimuoviamo il concetto
+di “dovrei”: Dovrei essere più estroverso, più socievole, più ambizioso, perché non esiste il giusto o lo sbagliato su
+come viviamo il nostro mondo interiore e che numerose modalità sono necessarie.
+
+Se hai poca autostima forse no sarai contento ma se ne hai molta, potrebbe portare ad uno sforzo continuo per paura di perderla. Come
+sarebbe la tua vita senza autostima e i relativi giudizi di come dovresti essere? Questa idea non basterà a bloccare la
+tua mente dall'emettere giudizi, ma potresti iniziare a vederli per ciò che sono, semplici pensieri.
+Quindi, la prossima volta, tra pochi secondi, che etichetterai qualcosa o qualcuno con qualche definizione, non fare
+niente. Semplicemente annotalo, osservalo, prendine atto, sii
+testimone\endnote{\raggedright\url{https://www.maxfuria.com/le-parole-che-ti-cambiano-la-vita-e-quelle-che-la-peggiorano/}}
+\endnote{\raggedright\url{https://amico-in-affitto.com/2017/08/14/le-parole-che-cambiano-la-vita/}}.
+
+Concludo dicendo che il giudizio non è il male. Il giudizio è necessario per valutare e prendere decisioni. Seriusciamo ad accorgerci di ub giudizio possiamo chiederci: quale bisogno ci sta dietro?
+Perché abbiamo sentito il bisogno di dare questo giudizio? Mentre invece è molto utile il giudizio, quando siamo noi a
+volerlo, in maniera consapevole.
+Nulla è sbagliato in assoluto, anche il mind wandering, ovvero quando la mente inizia a vagare. Possiamo darci degli spazi, ad
+esempio quando siamo sotto la doccia, per lasciare vagabondare la mente, ma allo stesso tempo possiamo invece scegliere
+di essere presenti alle nostre sensazioni, non esiste un giusto o uno sbagliato. Mentre lasciare che la mente vada
+nella sua default mode network, ovvero la sua modalità standard, dove è libera di vagare, è poco funzionale quando
+stiamo lavorando o in qualsiasi situazione necessiti della nostra presenza mentale o attenzione. 
+La default mode network e il mind wandering permettono infatti di essere creativi, non vanno quindi
+demonizzati\endnote{\raggedright\url{https://www.psicologianeurolinguistica.net/2016/06/mindwandering-meditazione.html} }.
+L'ideale sarebbe riuscire a scegliere noi, grazie alla nostra consapevolezza, in quale modalità
+portare la nostra mente, in base al nostro scopo in quel momento.
+
+L'obiettivo è imparare a far sì che questi meccanismi si avviino il meno possibile in modo inconsapevole, campulsivamente. 
+Come suggersice Gennaro Romagnoli chiediamoci: cos'è importante per me in questo momento?
+
+Non bisogna essere sempre presenti, nemmeno cercare di passare la maggior parte del tempo in questo stato. Se ti viene
+voglia di essere più presente, puoi essere più presente. Se vuoi far vagare la mente, puoi far vagare la mente. è come
+la palestra. Dovresti fare esercizi tutto il giorno? No! Anche se fa meglio camminare che stare seduti, non è sempre
+possibile, né funzionale per ciò che vogliamo diventare. Non vivere l'attimo con ansia. Altrimenti il carpe diem diventa una prigione.
+
+Quando sei felice, facci caso!
+Matt Killingsworth di Track yourhappiness.org ha condotto uno studio in cui oltre quindicimila partecipanti
+documentavano il proprio stato d'animo e ciò che stavano facendo. Sulla base di oltre 650.000
+testimonianze la ricerca ha scoperto che, a prescindere dalle loro attività specifiche, le persone si dichiaravano
+significativamente più felici quando erano completamente immerse nel presente. L'effetto non dipendeva da ciò che stavano pensando. Potevano essere impegnate in un pensiero piacevole, neutro o sgradito.
+Quand'erano concentrate su elementi esterni al presente erano meno felici. 
+
 \begin{mdframed}[linewidth=1pt]
 Motivazione Vs Metodo
 
@@ -2463,194 +2538,13 @@ invece, ci prova e, se un posto davvero c'è, è probabile che lo troverà! Conf
 collega si convincerà dell'opposto. Quindi se non puoi controllare gli eventi, puoi controllare
 come li interpreti.
 
-
-
-
-
-
-
-
-
-
-
-Sulla relazione con gli altri e con noi stessi è giusto essere critici verso i comportamenti, distinguendoli il più possibile dalla persona tra cui noi stessi. 
-Possiamo additare un pedofilo, un assassino come un mostro e poi scoprire che per anni, nell'innocenza di bambino che è stato, senza colpe, ha
-subito le peggiori violenze. Comprendere queste origini non attenua la gravità delle loro azioni, ma ci invita a riflettere sulla complessità del comportamento umano. Nei giusti contesti anche noi potremmo diventare dei mostri.
-
-Se ti definisci iracondo potresti trovarti a recitere quella parte, comportandoti di conseguenza. Se ti definisci abbandonato, allo stesso modo potresti agire da abbandonato e così via. 
-Se mi definisco come quello in cerca della felicità, o triste, depresso; la mente tende a mantenere coerenza tra ciò che pensiamo di essere e come ci comportiamo: se ci definiamo tristi o falliti, potremmo rischiare di reiterare quei vissuti.
-Quando siamo consapevoli di qualcosa possiamo gestirla, ma quando non ne siamo consapevoli, questo nostro lato potrebbe prendere il sopravvento.
-
-Luca Mazzucchelli dice che se ti stressa ti interessa. Le feste di compleanno dei figlio lo stressano e non lo rendono particolarmente felice, ma per lui è importante rendere felici i suoi bambini. Non si tratta di sconfiggere lo stress, ma dandogli un significato lo si può affrontare meglio, lo si comprende e lo si accetta. Se si ha ansia di parlare in pubblico, non è consigliabile cercare di superare questo ostacolo soltanto di sforzo, ma trovando un valore, una motivazione per fare ciò che si vorrebbe fare. Se ci neghiamo a noi stessi questi lati possono svilupparsi inconsapevolmente fuori dai nostri desideri.
-
 Se ho paura di parlare in pubblico, difficilmente ci sarà qualcosa che posso fare per arrivare pronto, senza paura. Quello che possiamo fare è imparare a gestire le nostre emozioni e parlare davanti al pubblico, nonostante la paura e non senza paura. Coraggioso non è chi non ha paura, anzi, il contrario. Coraggioso è chi, nonostante la paura, riesce ad agire, altrimenti, forse, sarebbe semplicemente mancanza di paura.
 
-Se, ad esempio, abbiamo una forte tendenza a procrastinare e ci raccontiamo che non è così, questo aspetto potrebbe influenzarci, ma in modo inconscio, rendendo più difficile affrontare responsabilità e obiettivi. Riconoscendolo possiamo iniziare a trasformarlo. Prendete l'esempio
-di una persona che di costituzione tende a ingrassare. Se sei consapevole di questa tua caratteristica puoi stare
-attento all'alimentazione, andare in palestra ecc… se invece non l'accetti potresti mangiare come sempre, che magari è già un buon regime alimentare, ma magari no. Sarebbe come essere in
-balia della casualità e dagli eventi. Un altro esempio potrebbe essere una persona che non ci sta simpatica.
-Se lo accettiamo, possiamo intervenire in diversi modi, ad esempio cercando di tagliare corto i discorsi. Se non lo
-accettiamo, ci sforziamo di parlare, ci carichiamo di pressione e ad un certo punto esploderemo.
-
-Se ti permetti di fare certi pensieri è più facile non agire quei pensieri.
-
-Etichettarci rigidamente può portare a comportamenti automatici o esagerati. Meglio riconoscere le nostre tendenze senza trasformarle in identità fisse.
-Se ci definiamo romantici potremmo diventare gelosi, attaccarci morbosamente, e recitare quella parte, a san Valentino fare certe cose, in queste circostanze bisogna reagire così, altrimenti non è vero amore. Se ci definiamo buoni e dovessimo sbagliare, come capita a tutti e, qualcuno dovesse farcelo nuotare, probabilmente andremo troppo sulla difensiva. 
-Inoltre come facciamo a definirci buoni? Come stabiliamo la linea della bontà se non in relazione agli altri? Quando ci definiamo buoni, talvolta, abbiamo stabilito che gli altri lo sono meno di noi o, noi più di loro. Ritroviamo lo stesso funzionamento per altro: la realizzazione, il successo o anche un tatuaggio. Un tatuaggio è solo un tatuaggio ma se lo riempiamo di significati, per qualcuno sarà quasi come una religione, sacro, intoccabile, qualcosa di indiscutibile. Non c'è nulla di problematico nei tatuaggi, macchine, gioielli e per noi possono avere un significato, ma vanno comunque visti per ciò che sono, evitando di diventare dogmatici o troppo romantici e poetici per non avere reazioni troppo esagerate.
-Perché viene visto come più nobile il volontariato rispetto ad avere una bella auto per essere felici? Uno magari si annoia ad aiutare gli altri mentre gli piacciono le auto, perché dovrebbe esserci qualcosa di moralmente migliore? Infatti non c'è.
-Un oggetto però ha lo svantaggio che difficilmente riuscirà a rinnovare il suo interesse, è statico, lo compri, sei contento, poi pian piano ti ci abitui. Le attività invece, come una passione, un hobby, una relazione, possono continuamente rinnovarsi. Lo sport può essere l'esempio più chiaro dove si hanno obiettivi, nuove sfide, desideri di migliorare, evolvere ecc... Non c'è nulla di male, anche negli oggetti prettamente estetici, ma consapevoli di questo loro limite, potremmo valutare meglio se questo è un investimento che davvero vogliamo fare e, soprattutto, se necessitiamo di un prestito. Così se il fine è lo stare bene, è preferibile investire il proprio tempo e il proprio denaro in attività.
-
-Come leggiamo in “facci caso” quando durante la giornata ti accorgi di pensieri che ti sottraggono
-molta attenzione e energie da quello che stai facendo, dai a quei tuoi lati dei nomignoli simpatici, tipo il
-dormiglione, brontolone, permaloso ecc… in modo da dire al
-cervello, il cui compito è elaborare informazioni: ho già preso in carico questa informazione, l'ho riconosciuta, ora
-possiamo continuare a dedicarti a quello che stavamo facendo prima. È importante distinguere che non stiamo scappando
-dai contenuti, ma li stiamo riconoscendo! Quando sentiamo queste voci giudicanti, possiamo farle parlare con una voce
-divertente, tipo quella di Paperino, o canticchiare il pensiero con le note di jingle bells in modo da prendere la cosa
-con più leggerezza e distacco, siccome non siamo quei pensieri. Un altro modo è immaginare qualcosa che ci fa stare
-male come se fosse alla TV. Cambiate i colori, velocità di riproduzione, fatelo andare al contrario, cambiate colonna
-sonora, magari una più leggera e spensierata. Tutto questo non per ridicolizzare un problema, ma per vedere i pensieri
-come un semplice susseguirsi di suoni che se osservati con distacco, perdono gran parte del loro potere di causare sofferenza, permettendoci così di smettere di lottare contro di essi.. Lo scopo
-dev'essere quello di creare uno spazio tra noi e i pensieri e guardarli con un certo grado di
-distacco consapevole. Se pratichi la de-fusione dai pensieri con l'intenzione di liberartene, forse non li stai ancora accettando veramente.
-
-Quando giudichiamo qualcosa lo definiamo. La parola definire deriva dal latino e significa limitare, stabilire dei
-confini. Quando noi definiamo qualcosa o qualcuno stiamo stabilendo delle regole sui suoi confini, stiamo limitando ciò
-che è o può essere. In altre parole, stiamo confinando qualcuno o qualcosa in una definizione molto stretta che può diventare una 
-trappola sia per noi che per l'altro, svilendo e appiattendo il lavoro di crescita personale che questo individuo può aver fatto.
-Può avvenire in maniera più esplicita con il razzismo o in modo più velato con il segno zodiacale.
-
-Quando definiamo una persona, in qualche modo, dentro di noi, ci siamo messi dalla parte del giudice, ed emesso
-una sentenza, una condannata a delle conseguenze. 
-A volte siamo molto bravi a creare delle trappole da cui gli altri o noi stessi fatichiamo ad uscire.
-Ad esempio, se accuso qualcuno di narcisismo, la persona, nel tentativo di giustificarsi, potrebbe focalizzarsi su se stessa, alimentando involontariamente l'accusa. O ancora, se dico che sei permaloso con insistenza, una reazione di rabbia potrebbe essere interpretata come una conferma dell'accusa, creando una situazione difficile per l'accusato.
-Noi siamo quello che siamo,
-indipendentemente dai giudizi, ma definendoci faremo più fatica ad esserlo. Per questo ogni tanto ci
-sentiamo inadeguati verso certe situazioni, verso noi stessi, verso gli altri o i sentimenti. O meglio, ci sentiamo inadeguati verso il giudizio, la sentenza, la definizione che abbiamo dato a tutte queste cose, che spesso sono basate su standard irrealistici o idealizzati.
-
-Prendiamo un esempio più ambiguo:
-una persona che arriva in ritardo. Noi ci diciamo che è una mancanza di rispetto per
-il nostro tempo, perché noi siamo arrivati puntuali e siamo stati costretti ad aspettare, senza poter fare niente,
-annoiandoci, se avessimo saputo che ci fosse stato questo ritardo potevamo stare a casa a finire di fare alcune commissioni.
-Questa persona però non ci ha messo delle catene, noi potremmo mandare un messaggio e
-scrivere: Troviamoci in libreria, così intanto guardo se è uscito quel libro che cercavo, o altrimenti, io entro al
-cinema, così non mi perdo l'inizio e te lo racconto, ecc… Quindi perché rimaniamo lì ad aspettare,
-immobili, pieni di pensieri su come tutto questo sia sbagliato? Perché se abbiamo una scelta non facciamo niente?
-Perché le nostre definizioni ci dicono che, primo, si arriva all'orario prefissato e secondo, si
-aspetta nel punto prestabilito. Non abbiamo delle catene fisiche, ma catene mentali, anche se il risultato può essere lo
-stesso. Con questo non voglio dire che sia giusto arrivare in ritardo, ma dico che se potessimo entrare nella testa
-della persona, probabilmente lei voleva arrivare in orario, non voleva farci rimanere
-male, ma purtroppo non c'è riuscita e magari non ci riesce molto spesso. Troviamo studi anche su questo e ci sono diverse motivazioni. Tra le teorie più diffuse sembra che alcune persone non abbiano una
-buona memoria temporale e percepiscono lo scorrere del tempo in maniera diversa. Ad esempio, quando si
-preparano, o fanno il tragitto in auto, se impiegano venti minuti, hanno la percezione di averci messo meno tempo, portandole a sottostimare i tempi, rischiando di farle arrivare in ritardo. Se sappiamo che
-non era intenzione della persona farci stare male, avremmo ancora buone ragioni per avercela con lei?
-
-Ora io ho fatto l'esempio del ritardo, ma se ne potrebbero fare tantissimi altri. Per trovare
-l'esempio giusto per voi, ripensate a tutte le volte in cui avete subito un'ingiustizia o
-che qualcuno si sia comportato male con voi. Ora però provate a
-cercare le motivazioni che hanno portato quella persona a fare quella cosa, è possibile che non troverete il volervi
-ferire.
-
-Quando sentiamo un giudizio possiamo vederla come la mente che ci sta
-dando dei suggerimenti (non delle condanne), prendiamo in considerazione quello che ci dice in un secondo momento, ora torniamo a fare quello che stavamo facendo e poi lo valuteremo.
-
-Se ci sentiamo
-sbagliati e secondo noi, secondo il nostro giudizio, dovremmo cambiare. Non è consigliabile forzare se stessi e farsi
-violenza, possiamo cercare di essere ciò che siamo e eventualmente cambiare coi giusti tempi. La mindfulness e la
-meditazione non hanno il fine di cambiare le cose ma si limita ad osservarlo, senza intervenire, accettando senza giudicare i
-propri lati di sé, anche quelli che ci piacciono meno. Questo non vuol dire sedersi sulle proprie cattive abitudini
-giustificandosi dietro la frase “sono fatto così, non ci posso fare niente”. Se riconosciamo di avere un certo lato
-di noi, accettandone l'esistenza, aumentiamo le probabilità di diventarne consapevoli, che è una delle vie più efficaci per gestire questo lato prima di agirlo.
-
-Ci piace stare con gli altri ma abbiamo anche bisogno di stare da soli? Se non siamo consapevoli, rifiuteremo
-l'idea di essere anche solitari e in una vacanza potremmo diventare scontrosi. Se ne siamo
-consapevoli possiamo gestirla, ad esempio svegliandoci presto, prima degli altri, potremmo passeggiare da soli e al
-ritorno portare le brioches per tutti, in questo modo avremmo lavorato sia sulla relazione con gli altri che alla
-nostra, soddisfando i vari bisogni.
-
-Quando parlo di accettazione parlo dei pensieri, degli stati d'animo, di se stessi, non delle
-proprie azioni o comportamenti. La consapevolezza e l'accettazione non vanno confuse con la
-rassegnazione. Accorgersi di essere solitari non serve a rinchiudersi in casa, anzi, sapendo quanto faccia bene stare
-con gli altri, cerchiamo di tendere un pochino di più alla socialità. Se ci accorgiamo che non riusciamo a stare da
-soli, proviamo ogni tanto a stare con noi stessi, sapendo quanto anche questo sia importante. Se siamo troppo irascibili cerchiamo di mantenere la calma o se, viceversa gli altri di solito ci prevaricano, proviamo a imporci, stando attendi a non iper-compensare, ovvero, diventare una persona che inizia a litigare per ogni cosa. Quindi rimuoviamo il concetto
-di “dovrei”: Dovrei essere più estroverso, più socievole, più ambizioso, perché non esiste il giusto o lo sbagliato su
-come viviamo il nostro mondo interiore e che numerose modalità sono necessarie.
-
-Se hai poca autostima forse no sarai contento ma se ne hai molta, potrebbe portare ad uno sforzo continuo per paura di perderla. Come
-sarebbe la tua vita senza autostima e i relativi giudizi di come dovresti essere? Questa idea non basterà a bloccare la
-tua mente dall'emettere giudizi, ma potresti iniziare a vederli per ciò che sono, semplici pensieri.
-Quindi, la prossima volta, tra pochi secondi, che etichetterai qualcosa o qualcuno con qualche definizione, non fare
-niente. Semplicemente annotalo, osservalo, prendine atto, sii
-testimone\endnote{\raggedright\url{https://www.maxfuria.com/le-parole-che-ti-cambiano-la-vita-e-quelle-che-la-peggiorano/}}
-\endnote{\raggedright\url{https://amico-in-affitto.com/2017/08/14/le-parole-che-cambiano-la-vita/}}.
-
-Concludo dicendo che il giudizio non è il male. Il giudizio è necessario per valutare e prendere decisioni. Seriusciamo ad accorgerci di ub giudizio possiamo chiederci: quale bisogno ci sta dietro?
-Perché abbiamo sentito il bisogno di dare questo giudizio? Mentre invece è molto utile il giudizio, quando siamo noi a
-volerlo, in maniera consapevole.
-Nulla è sbagliato in assoluto, anche il mind wandering, ovvero quando la mente inizia a vagare. Possiamo darci degli spazi, ad
-esempio quando siamo sotto la doccia, per lasciare vagabondare la mente, ma allo stesso tempo possiamo invece scegliere
-di essere presenti alle nostre sensazioni, non esiste un giusto o uno sbagliato. Mentre lasciare che la mente vada
-nella sua default mode network, ovvero la sua modalità standard, dove è libera di vagare, è poco funzionale quando
-stiamo lavorando o in qualsiasi situazione necessiti della nostra presenza mentale o attenzione. 
-La default mode network e il mind wandering permettono infatti di essere creativi, non vanno quindi
-demonizzati\endnote{\raggedright\url{https://www.psicologianeurolinguistica.net/2016/06/mindwandering-meditazione.html} }.
-L'ideale sarebbe riuscire a scegliere noi, grazie alla nostra consapevolezza, in quale modalità
-portare la nostra mente, in base al nostro scopo in quel momento.
-
-L'obiettivo è imparare a far sì che questi meccanismi si avviino il meno possibile in modo inconsapevole, campulsivamente. 
-Come suggersice Gennaro Romagnoli chiediamoci: cos'è importante per me in questo momento?
-
-Non bisogna essere sempre presenti, nemmeno cercare di passare la maggior parte del tempo in questo stato. Se ti viene
-voglia di essere più presente, puoi essere più presente. Se vuoi far vagare la mente, puoi far vagare la mente. è come
-la palestra. Dovresti fare esercizi tutto il giorno? No! Anche se fa meglio camminare che stare seduti, non è sempre
-possibile, né funzionale per ciò che vogliamo diventare. Non vivere l'attimo con ansia. Altrimenti il carpe diem diventa una prigione.
-
-Quando sei felice, facci caso!
-Matt Killingsworth di Track yourhappiness.org ha condotto uno studio in cui oltre quindicimila partecipanti
-documentavano il proprio stato d'animo e ciò che stavano facendo. Sulla base di oltre 650.000
-testimonianze la ricerca ha scoperto che, a prescindere dalle loro attività specifiche, le persone si dichiaravano
-significativamente più felici quando erano completamente immerse nel presente. L'effetto non dipendeva da ciò che stavano pensando. Potevano essere impegnate in un pensiero piacevole, neutro o sgradito.
-Quand'erano concentrate su elementi esterni al presente erano meno felici. 
-
 \subsubsection{Morte}
-\paragraph{Immortalità}
-
-Ma se esistesse l'immortalità siamo sicuri che sarebbe una cosa positiva?
-
-La percezione che abbiamo del tempo e l'importanza che gli diamo può cambiare, per una persona
-di 10 anni, ogni anno rappresenta il 10\% della sua vita, mentre per la madre quarantenne il 2,5\% portando con se
-sensazioni diverse. Se arrivassimo a 82 anni avremmo vissuto 30.000 giorni, viceversa se vivessimo 30.000 anni, ogni
-anno per noi avrebbe il peso di un giorno. Già per com'è fatta ora la vita molti di noi hanno la
-tendenza a procrastinare, nonostante il nostro tempo su questa terra sia limitato. Immaginate quindi se un anno intero
-avesse il peso di un solo giorno.
-
-Le persone più curiose troveranno più facilmente cose che le appassionano, rendendo questa eternità più sopportabile, ma
-prima o poi dovranno scontrarsi con la noia e soprattutto con il perdere tutte le persone care e quelle che si è amate,
-certo, incontreremo nuove persone, che però dovremmo perdere e, in quest'ottica, per preservarci dalla tristezza forse faremo più fatica a creare forti relazioni. Un eventuale prolungamento indefinito della vita solleverebbe interrogativi sulla sostenibilità ambientale e sociale, specialmente in contesti dove la crescita demografica è già critica o scarsamente gestita.
-
-Il tema dell'immortalità sembra relegato alla fantascienza e al futuro ma già oggi stanno studiando
-diverse strade per raggiungere questo obiettivo, da quelle biologiche a quelle tecnologiche, anche se entrambe potrebbero non realizzarsi mai. 
-
-Esiste in natura un animale chiamato Turritopsis nutricula, nota anche come medusa immortale. Questa medusa è in grado
-di tornare allo stato di polipo dopo aver raggiunto la fase di medusa adulta in un ciclo potenzialmente infinito rendendola immortale.
-Questo processo la rende potenzialmente biologicamente immortale, anche se può comunque morire per cause esterne.
-Sfortunatamente sono animali in fondo alla catena alimentare e non sono immuni a malattie. Ci sono attualmente studi su
-questo animale per conoscere i meccanismi unici che permettono a questo animale di ritornare giovane e vedere se
-c'è la possibilità di applicare questa strategia anche all'essere umano.
-
-Sul punto di vista tecnologico e biotecnologico esiste Il transumanesimo, movimento culturale che sostiene l'uso delle scoperte scientifiche e tecnologiche per aumentare le capacità fisiche e cognitive, oltre che per sconfiggere l'invecchiamento e la
-malattia. In che modo i transumanisti vogliono raggiungere questo traguardo? Ci sono diverse strade, tra cui
-l'ingegneria genetica, dove è stata già applicata sugli esseri umani ed è in continua evoluzione.
-Alcuni esperimenti hanno esplorato la modifica genetica sull’essere umano, soprattutto in ambito terapeutico. Tuttavia, l’applicazione su larga scala di tecniche come CRISPR è ancora oggetto di studio e solleva importanti questioni etiche. Altra tecnica attualmente utilizzata è la
-Crionica, ovvero l'ibernazione, la conservazione a bassissime temperature. Esistono attualmente
-delle aziende che offrono questo servizio con due piani principali, la conservazione di tutto il corpo o solo del
-cervello in attesa di un futuro dove la tecnologia forse potrà riportare in vita questi individui. Alcune aziende offrono la conservazione del cervello con la speranza che, in futuro, possa essere possibile estrarne e trasferirne le informazioni in un sistema artificiale. Tuttavia, non esistono attualmente tecnologie in grado di mantenere in vita un cervello isolato o di collegarlo a una macchina. Una delle ipotesi più speculative riguarda il trasferimento della mente: creare una copia digitale del cervello che includa ricordi ed esperienze. Tuttavia, non esistono prove che questo processo sia possibile, né che una copia digitale possa replicare coscienza o identità. Una sorta di Matrix dove il corpo fisico non serve più una
-volta completata la copia digitale. Argomento trattato nella serie televisiva Black Mirror, episodio intitolato "San Junipero".
-
 \paragraph{Percezione del tempo}
 
 La percezione soggettiva del tempo, nota anche come cronocezione, non è una misura oggettiva ma un’esperienza personale profondamente influenzata dalla memoria. Il modo in cui ricordiamo e ricostruiamo gli eventi passati determina in gran parte la nostra sensazione del tempo trascorso: certi momenti ci sembrano vicinissimi, altri remoti, anche se cronologicamente distanti solo di pochi giorni. Questa distorsione dipende da numerosi fattori, come l’intensità emotiva, la novità dell’esperienza, il significato che vi attribuiamo e il contesto in cui la evochiamo.
-Uno degli aspetti più incisivi in questo senso è la capacità di introdurre novità nella propria vita quotidiana. Esperienze nuove e inaspettate creano una cronologia di ricordi più ricca  e, nel tempo, contribuiscono a farci percepire i periodi vissuti come più densi e significativi. In uno studio è emerso che gli anziani che si impegnavano consapevolmente in eventi non di routine, come semplici uscite insolite, erano in grado di ricordare tali esperienze con più dettagli rispetto ai giorni scanditi da attività ripetitive. 
+Uno degli aspetti più incisivi in questo senso è la capacità di introdurre novità nella propria vita quotidiana. Esperienze nuove e inaspettate creano una cronologia di ricordi più ricca e, nel tempo, contribuiscono a farci percepire i periodi vissuti come più densi e significativi. In uno studio è emerso che gli anziani che si impegnavano consapevolmente in eventi non di routine, come semplici uscite insolite, erano in grado di ricordare tali esperienze con più dettagli rispetto ai giorni scanditi da attività ripetitive. 
 
 \begin{itemize}
 \item Pianifica una nuova attività a settimana: visita un posto nuovo, prova un nuovo hobby, impara una nuova abilità o prendi un percorso diverso per andare al lavoro. Queste deviazioni dalla norma non solo hanno generato ricordi più ricchi, ma possono anche migliorare l’umore generale e ridurre la noia.
@@ -2941,6 +2835,8 @@ Molte correnti della psicologia moderna, come la psicologia positiva, suggerisco
 Non dovremmo rifuggire o essere spaventati da una vita ordinaria e all'interno di essa trovare quindi il nostro scopo. Alcuni esercizi propongono di cambiare il nostro punto di vista e la narrazione che ne diamo. Possiamo anche utilizzando carta e penna interpretare la nostra vita come un viaggio eroico, dove ogni sfida e cambiamento contribuiscono a un percorso di crescita personale. Come un eroe che lascia il conosciuto per affrontare l’ignoto, anche noi affrontiamo nuove esperienze e difficoltà con l’aiuto di familiari e amici, nostri alleati preziosi. Le sfide, spesso interiori, richiedono coraggio e forza, ma superarle ci trasforma, rendendoci più forti e consapevoli. Infine, ogni obiettivo raggiunto lascia un’eredità: un segno nelle vite degli altri, un contributo che dà significato alla nostra storia e rende ogni giorno un capitolo importante del nostro racconto personale.
 
 La ricerca scientifica ha osservato che avere uno scopo nella vita è strettamente legato a benefici per la salute fisica e psicologica. Studi come il progetto MIDUS (Midlife in the United States) e meta-analisi evidenziano che le persone con un forte senso di scopo tendono a vivere più a lungo e mostrano una maggiore resilienza emotiva, affrontando meglio stress e difficoltà. Questo orientamento verso un obiettivo può ridurre il rischio di depressione e migliora la regolazione delle emozioni, agendo come fattore protettivo contro disturbi dell’umore. Alcuni studi neuroimaging osservano che un forte senso di scopo è associato a una minore reattività dell’amigdala a stimoli negativi e a una regolazione più efficiente grazie all’interazione con la corteccia prefrontale, suggerendo possibili meccanismi di recupero emotivo \endnote{\raggedright\url{https://journals.plos.org/plosone/article?id=10.1371/journal.pone.0080329}} \endnote{\raggedright\url{https://centerhealthyminds.org/join-the-movement/purpose-in-life-and-a-long-term-view-on-well-being}}. Tuttavia, alcune prospettive sottolineano anche i benefici delle attività "senza scopo" o prive di obiettivi precisi. Queste attività, come il gioco, la spontaneità e l’espressione creativa, possono promuovere un senso di benessere e libertà interiore. Studi suggeriscono che dedicarsi ad attività come passeggiare senza meta o suonare uno strumento senza la ricerca della perfezione permette di rilassarsi, esprimersi liberamente e alleviare le tensioni. Sebbene uno scopo nella vita possa favorire la longevità e la resilienza, anche momenti di spontaneità e attività non finalizzate contribuiscono significativamente al benessere psicologico e fisico, offrendo pause rigeneranti dalla pressione degli obiettivi quotidiani.
+
+Luca Mazzucchelli dice che se ti stressa ti interessa. Le feste di compleanno dei figlio lo stressano e non lo rendono particolarmente felice, ma per lui è importante rendere felici i suoi bambini. Non si tratta di sconfiggere lo stress, ma dandogli un significato lo si può affrontare meglio, lo si comprende e lo si accetta. Se si ha ansia di parlare in pubblico, non è consigliabile cercare di superare questo ostacolo soltanto di sforzo, ma trovando un valore, una motivazione per fare ciò che si vorrebbe fare. Se ci neghiamo a noi stessi questi lati possono svilupparsi inconsapevolmente fuori dai nostri desideri.
 
 Personalmente, credo che entrambe le visioni abbiano valore. Trovare uno scopo nella vita può dare energia e direzione, ma è altrettanto importante non farsi sopraffare dall'idea di dover necessariamente avere uno scopo "grande" o ben definito. Potrebbe esserci una via di mezzo: accettare la vita con apertura e adattabilità, ma anche essere in grado di riconoscere e coltivare ciò che ci appassiona e ci dà un senso di significato. In fondo, forse lo scopo non deve essere una ricerca ossessiva, ma un qualcosa che emerge spontaneamente dal nostro vivere quotidiano, dalle nostre relazioni e dalle nostre esperienze. Parte del nostro scopo, dipende anche dall'impatto che abbiamo sugli altri. Già ora la nostra vita ha un impatto sugli altri. Quindi la ricerca di scopo non deve essere necessariamente nel fare qualcosa di nuovo, ma cercare l'impatto che ha sugli altri, quello che già facciamo. Anche lavori umili come lo spazzino, il contadino, il lavapiatti, il manovale ecc… immaginate come sarebbe il mondo se non ci fossero\endnote{\raggedright\url{https://www.youtube.com/watch?v=aF2MdZjS-0M}}.
 \end{mdframed}
